[metadata]
name = fp3
version = 0.0.1
description = Faster Parallel Processing Pipeline
long_description = file: README.rst,HISTORY.rst
author = Diamond Light Source - Scientific Software
author_email = scientificsoftware@diamond.ac.uk
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = dials
project-urls =
    GitHub = https://github.com/xia2/fp3
    Bug-Tracker = https://github.com/xia2/fp3/issues

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
libtbx.precommit =
    fp3 = fp3
